--- a/portainer-agent-stack.yml
+++ b/portainer-agent-stack.yml
@@ -20,7 +20,7 @@ services:
       - "9000:9000"
       - "8000:8000"
     volumes:
-      - portainer_data:/data
+      - /mnt/portainer_data:/data
     networks:
       - agent_network
     deploy:
@@ -33,9 +33,4 @@ networks:
   agent_network:
     driver: overlay
     attachable: true
-
-volumes:
-  portainer_data:
-    driver: glusterfs
-    name: "gfs/portainer_data"
 
